New feature: Animated coin for the winner of a match.
New feature: Larger window/larger sprites available.
New feature: Invisibility as contamination (tracker item #1864528).
New feature: Bombs start moving on special blocks (#1908105).
Bug fix: Music started in pause when losing focus (tracker item #1856135).
Bug fix: Victory sound didn't end after Escape (#1851347).
Bug fix: F12 ended program (#1848194).
Bug fix: Bomb didn't explode during lift when bomber died (#1861692).
Bug fix: Computer/mouse pointer froze, clouds didn't move smoothly (#1870479, #1870410).


----------------------------


Version 1.02

Released on December 9, 2003

Changed: Rommel Santor made an update of his cool level editor!


----------------------------


Version 1.01

Released on December 6, 2002

New feature: Added a very easy to use, free level editor made by Rommel Santor.


----------------------------


Version 1.0

Released on November 3, 2002

Fixed a bug when a bomber holding a bomb is killed.


----------------------------


Version 0.999

Released on October 22, 2002

Fixed bug where two items could be created on the same block when two or more bombers were killed at the same time.
The program now doesn't crash if you ask for a fullscreen display mode (with F1, F2 or F3) that is unsupported on your video card. It doesn't do anything instead.
Made a DEMO mode! Well, it's not useful, but hey, I find it cool :) You can launch it from the title screen.
Added an icon to the window and to the executable file. That's usually the first thing people do when creating a game, but so far I didn't know how to do it :) Ooops, almost forgot. Thanks to Florian Freiwald for drawing this nice bomber icon.
Now checks if Bomberman.dat exists at startup.
Reduced time to wait between menus each time you validate.
Fixed a potential bug in AI.
Changed the lightness/contrast of one background tile in the winner screen.
You can now quickly exit the game by pressing Ctrl+F12.